GAME #58: 2025.03.01 Seattle wins 6-3 against Spokane

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -485,6 +485,7 @@
     "Eberle",
     "Ebiketie",
     "Eboigbe",
+    "ECHF",
     "Echols",
     "editorialindicator",
     "Edmonds",
@@ -1283,6 +1284,7 @@
     "NBAE",
     "NBCSP",
     "NCAAF",
+    "ncommerce",
     "Necas",
     "Nedeljkovic",
     "Neighbours",
@@ -1705,6 +1707,7 @@
     "Speier",
     "Speights",
     "sploosh",
+    "spokanechiefstickets",
     "sportapi",
     "sportec",
     "sportscenter",
@@ -1842,6 +1845,7 @@
     "Turcotte",
     "TVAS",
     "Twarynski",
+    "twcorp",
     "Tyreek",
     "Tyrel",
     "Tyrice",
