GAME #59: 2025.03.02 Seattle loses 2-1 against Tri-Cities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
     "arangovi",
     "Arber",
     "Arjun",
+    "Armaan",
     "Armia",
     "Armstead",
     "Arozarena",
@@ -212,6 +213,7 @@
     "Braelon",
     "Braillard",
     "Brandin",
+    "Brankovic",
     "Brannstrom",
     "Bratt",
     "Braudilio",
@@ -900,6 +902,8 @@
     "Kaepernick",
     "Kahlef",
     "Kahler",
+    "Kaila",
+    "Kainoah",
     "Kairee",
     "Kakko",
     "Kalan",
