GAME #62: Minnesota Wild vs Seattle Kraken - Seattle loses 4-3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -562,9 +562,11 @@
     "Faulk",
     "FDSNDET",
     "FDSNMW",
+    "FDSNNOX",
     "FDSNOH",
     "FDSNSO",
     "FDSNSUN",
+    "FDSNWIX",
     "Fedotov",
     "Fehervary",
     "Fehoko",
@@ -699,6 +701,7 @@
     "Guiria",
     "Guram",
     "Gustafsson",
+    "Gustavsson",
     "Guzzo",
     "gwah",
     "Haan",
@@ -754,6 +757,7 @@
     "Higbee",
     "Hinckley",
     "Hingham",
+    "Hinostroza",
     "Hintz",
     "Hiroki",
     "Hirose",
@@ -1332,6 +1336,7 @@
     "Nygard",
     "Nylander",
     "Nyman",
+    "Nyquist",
     "O'Dette",
     "O'Malley",
     "Oasiz",
@@ -1902,6 +1907,7 @@
     "Ville",
     "Villegas",
     "Vilmer",
+    "Vinnie",
     "Virk",
     "vistaradio",
     "Vitkov",
