GAME #60: 2025.03.04 Seattle loses 3-2 against Kamloops

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -240,6 +240,7 @@
     "Brouillard",
     "Brownlee",
     "Brunen",
+    "Brunicke",
     "Brycen",
     "Bryson",
     "Brzustewicz",
@@ -696,6 +697,7 @@
     "Guentzel",
     "Guerendo",
     "Guerendo's",
+    "Gugyelka",
     "Guilbault",
     "Guillaume",
     "Guiria",
@@ -828,6 +830,7 @@
     "Jaelan",
     "Jaelen",
     "Jaelon",
+    "Jager",
     "Jahlani",
     "Jahmyr",
     "Jahor",
