GAME #63: Seattle Kraken vs Nashville Predators - Seattle loses 5-3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "Andr",
     "Andrade",
     "André",
+    "Andreas",
     "Andreessen",
     "Andrej",
     "Andrés",
@@ -71,6 +72,7 @@
     "Anisimov",
     "Anisimovicz",
     "Ankou",
+    "Annunen",
     "Antaya",
     "Anudike",
     "Anzalone",
@@ -171,6 +173,7 @@
     "Blacklock",
     "Blackmon",
     "Blais",
+    "Blankenburg",
     "Blomqvist",
     "Blount",
     "Blueger",
@@ -289,6 +292,7 @@
     "Carlile",
     "Carlsson",
     "Carrick",
+    "Carron",
     "Carsen",
     "Carsyn",
     "Casali",
@@ -523,6 +527,7 @@
     "Enagbare",
     "Encarnacion",
     "Endzone",
+    "Englund",
     "Engvall",
     "enko",
     "Epenesa",
@@ -538,6 +543,7 @@
     "Estime",
     "Ethen",
     "Etienne",
+    "Evangelista",
     "evenue",
     "everettsilvertips",
     "Evgeni",
@@ -568,6 +574,7 @@
     "FDSNSO",
     "FDSNSUN",
     "FDSNWIX",
+    "Fedor",
     "Fedotov",
     "Fehervary",
     "Fehoko",
@@ -591,6 +598,7 @@
     "Folstrom",
     "Fontana",
     "Forbort",
+    "Forsberg",
     "Forsell",
     "Forsfjall",
     "Forsling",
@@ -609,6 +617,7 @@
     "Gabrielson",
     "Gadjovich",
     "Gaethje",
+    "Gaizo",
     "Gallimore",
     "Galvin",
     "Gamecast",
@@ -845,6 +854,7 @@
     "Jamison",
     "Jani",
     "Janicke",
+    "Jankowski",
     "Janmark",
     "Jansky",
     "Jaren",
@@ -897,8 +907,10 @@
     "Juraj",
     "Jurmo",
     "Justen",
+    "Justus",
     "Juszczyk",
     "Juulsen",
+    "Juuse",
     "Juuso",
     "Kaapo",
     "Kacey",
@@ -1118,6 +1130,7 @@
     "Loshko",
     "Lovsin",
     "Luca",
+    "Lucchini",
     "Luchanko",
     "Lucoe",
     "Luka",
@@ -1163,6 +1176,7 @@
     "Manny",
     "Mantha",
     "Marchenko",
+    "Marchessault",
     "Marchment",
     "Marek",
     "Margolis",
@@ -1390,6 +1404,7 @@
     "Outerstuff",
     "Ovechkin",
     "Ovetshkin",
+    "Ozzy",
     "Pachal",
     "Pacioretty",
     "Paden",
@@ -1690,9 +1705,11 @@
     "Simi",
     "Siran",
     "Sirianni",
+    "Sissons",
     "skee",
     "Skelleftea",
     "Skilliter",
+    "Skjei",
     "Skowronek",
     "Skylar",
     "Sladky",
@@ -1730,9 +1747,11 @@
     "Spytz",
     "squez",
     "Staal",
+    "Stamkos",
     "Stancl",
     "Stankoven",
     "Stashu",
+    "Stastney",
     "Stauber",
     "Stecher",
     "Stefon",
@@ -1766,6 +1785,7 @@
     "Surratt",
     "Surtain",
     "Suter",
+    "Svechkov",
     "Svechnikov",
     "Svetshnikov",
     "Sylvanie",
