--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "Aatu",
+    "Abols",
     "Abougouche",
     "accesso",
     "Acciari",
@@ -60,6 +61,7 @@
     "Andover",
     "Andr",
     "Andrade",
+    "Andrae",
     "André",
     "Andreas",
     "Andreessen",
@@ -433,6 +435,7 @@
     "derov",
     "Deschamps",
     "Desharnais",
+    "Deslauriers",
     "Dezainde",
     "Diabate",
     "Diaz",
@@ -447,6 +450,7 @@
     "disneyplus",
     "Dissly",
     "dkin",
+    "dkov",
     "Dmitrij",
     "Dmitry",
     "Domi",
@@ -1144,6 +1148,7 @@
     "Luter",
     "Lutz",
     "Luukkonen",
+    "Lycksell",
     "Lyles",
     "Lyubushkin",
     "Maatta",
@@ -1207,6 +1212,7 @@
     "Mattoon",
     "Matty",
     "Matvei",
+    "Matvej",
     "Maule",
     "Maxime",
     "Maybin",
@@ -1253,6 +1259,7 @@
     "Misha",
     "Misskey",
     "Mistelbacher",
+    "Mitshkov",
     "Mittelstadt",
     "Mittelsteadt",
     "mixlr",
@@ -1378,6 +1385,7 @@
     "Olatoke",
     "Oleksiak",
     "Olivera",
+    "Olle",
     "Olli",
     "Olmos",
     "Olofsson",
@@ -1580,6 +1588,7 @@
     "Rielly",
     "Riemsdyk",
     "RISP",
+    "Ristolainen",
     "Ritchie",
     "Rittich",
     "Roches",
@@ -1662,6 +1671,7 @@
     "seattlethunderbirds",
     "seavslafc",
     "secon",
+    "Seeler",
     "Seguin",
     "Segura",
     "Seider",
