GAME #66: Montreal Canadiens vs Seattle Kraken - Seattle wins 5-4 in OT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -454,6 +454,7 @@
     "dkov",
     "Dmitrij",
     "Dmitry",
+    "Dobes",
     "Domi",
     "Dominik",
     "Domonique",
@@ -1438,6 +1439,7 @@
     "Paszkiewicz",
     "Pateman",
     "Patera",
+    "Patrik",
     "Paupanekis",
     "Pavao",
     "Pavel",
@@ -1470,6 +1472,7 @@
     "Petruk",
     "Pettersson",
     "Peyton",
+    "Pezzetta",
     "Pharms",
     "Phelan",
     "Philadelphie",
