GAME #67: Utah Hockey Club vs Seattle Kraken - Seattle wins 4-2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -454,6 +454,7 @@
     "dkov",
     "Dmitrij",
     "Dmitry",
+    "Doan",
     "Dobes",
     "Domi",
     "Dominik",
@@ -490,6 +491,7 @@
     "Dumanski",
     "Dumoulin",
     "Dunphy",
+    "Durzi",
     "Dyck",
     "Easop",
     "Easton",
@@ -1188,6 +1190,7 @@
     "Marek",
     "Margolis",
     "Maric",
+    "Marino",
     "Mariota",
     "Markstr",
     "Markstrom",
@@ -1684,6 +1687,7 @@
     "Semyon",
     "Seong",
     "Serafina",
+    "Serga",
     "Sergachev",
     "Sergačov",
     "Sergatshov",
