GAME #68: Winnipeg Jets vs Seattle Kraken - Seattle loses 3-2 in OT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -249,6 +249,7 @@
     "Brycen",
     "Bryson",
     "Brzustewicz",
+    "bstnikov",
     "BSWI",
     "Bucheon",
     "Buchnevich",
@@ -1311,6 +1312,7 @@
     "Nabers",
     "Nacua",
     "Nailor",
+    "Namestnikov",
     "Napheesa",
     "Naquan",
     "Narcisse",
