GAME #69: Seattle Kraken vs Chicago Blackhawks - Seattle wins 6-2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
     "Artesia",
     "Artturi",
     "Arturs",
+    "Artyom",
     "Arvid",
     "Arvidsson",
     "Asanali",
@@ -1110,6 +1111,7 @@
     "Letang",
     "Levelston",
     "Leverett",
+    "Levshunov",
     "Leyva",
     "Liljegren",
     "Lilleberg",
@@ -1203,6 +1205,7 @@
     "Martinook",
     "Martorana",
     "Martshenko",
+    "Mastro",
     "matchday",
     "Matecha",
     "Matej",
@@ -1735,6 +1738,7 @@
     "Sladky",
     "Slafkovsk",
     "Slafkovsky",
+    "Slaggert",
     "Slaton",
     "Slavin",
     "Slayton",
