GAME #70: Seattle Kraken vs Minnesota Wild - Seattle loses 4-0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -226,6 +226,7 @@
     "Braudílio",
     "Braxton",
     "Brayden",
+    "Brazeau",
     "Breece",
     "Brek",
     "Brendel",
@@ -647,6 +648,7 @@
     "Gauchier",
     "Gaudette",
     "Gaudreau",
+    "Gaunce",
     "gaurd",
     "Gauthier",
     "Gavrikov",
@@ -775,6 +777,7 @@
     "Heroismo",
     "Hertl",
     "Heslop",
+    "hgren",
     "Higbee",
     "Hinckley",
     "Hingham",
@@ -1385,6 +1388,7 @@
     "Ogbah",
     "Ogbo",
     "Ogbonnia",
+    "Ohgren",
     "Ojukwu",
     "Ojulari",
     "Okada",
