chore: add T-Birds game #63 completion data (2025.03.23)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1206,6 +1206,7 @@
     "Marsette",
     "Martínez",
     "Martinook",
+    "Martinson",
     "Martorana",
     "Martshenko",
     "Mastro",
@@ -1312,6 +1313,7 @@
     "Mycal",
     "Myhre",
     "Myisha",
+    "Mykichuk",
     "Mynio",
     "N'Keal",
     "Nabb",
