chore: Add WHL Playoffs Round 1 Game 1 data - Seattle Thunderbirds vs Everett Silvertips from March 28, 2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1617,6 +1617,7 @@
     "Rodríguez",
     "Rodzers",
     "Roed",
+    "Roest",
     "Roldan",
     "Rookes",
     "Roope",
@@ -1953,6 +1954,7 @@
     "Verhaeghe",
     "Verhoeff",
     "Vesey",
+    "victoryplus",
     "Vihti",
     "Viktor",
     "Vilain",
