chore: Add Seattle Kraken Game #74 data - Dallas Stars vs Seattle Kraken from March 29, 2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -165,6 +165,7 @@
     "Bertuzzi",
     "Berumen",
     "Berzolla",
+    "Bichsel",
     "Bien",
     "Bijan",
     "Binnington",
@@ -209,6 +210,7 @@
     "Bosa",
     "Bouanga",
     "Bouchard",
+    "Bourque",
     "Bowles",
     "Bowser",
     "boxscore",
@@ -492,6 +494,7 @@
     "Duhaime",
     "Dulcich",
     "Dumanski",
+    "Dumba",
     "Dumoulin",
     "Dunphy",
     "Durzi",
@@ -1117,6 +1120,7 @@
     "Leverett",
     "Levshunov",
     "Leyva",
+    "Lian",
     "Liljegren",
     "Lilleberg",
     "Limmer",
@@ -1228,6 +1232,7 @@
     "Matvei",
     "Matvej",
     "Maule",
+    "Mavrik",
     "Maxime",
     "Maybin",
     "Maye",
