--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "download:tbirds": "npm run download:whl:tbirds",
     "download:whl:tbirds": "./src/download_whl.sh",
     "download:whl:tbirds:date": "./src/download_whl.sh thunderbirds 2025-02-15",
+    "download:whl:playoffs": "./src/download_whl_playoff_game.sh",
+    "download:whl:playoffs:date": "./src/download_whl_playoff_game.sh 2025-04-05",
     "test": "npm run test:workflows",
     "test:workflows": "chmod +x .github/test-workflows.sh && .github/test-workflows.sh",
     "test:workflows:semantic": "act pull_request -e .github/test-data/pr-events/minor.json -W .github/workflows/semantic-pr-check.yml",
