feat: Add Kraken game #78 from April 7, 2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -588,6 +588,7 @@
     "FDSNOH",
     "FDSNSO",
     "FDSNSUN",
+    "FDSNW",
     "FDSNWIX",
     "Fedor",
     "Fedotov",
@@ -1080,6 +1081,7 @@
     "Laczynski",
     "LAFC",
     "lafcvssea",
+    "Laferriere",
     "Lafferty",
     "Lafreni",
     "Lafreniere",
@@ -1193,6 +1195,8 @@
     "Malinoski",
     "Malinski",
     "Malkin",
+    "Malott",
+    "Malottt",
     "Mangiapane",
     "Mannix",
     "Manny",
