feat: Add Kraken game #79 from April 8, 2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -940,6 +940,7 @@
     "Kahlef",
     "Kahler",
     "Kaila",
+    "Kailer",
     "Kainoah",
     "Kairee",
     "Kakko",
@@ -1975,6 +1976,7 @@
     "Vilain",
     "Vilardi",
     "Viliam",
+    "Villalta",
     "Ville",
     "Villegas",
     "Vilmer",
@@ -2044,6 +2046,7 @@
     "xsmall",
     "xxsmall",
     "Yakov",
+    "Yamamoto",
     "Yamasa",
     "Yanni",
     "yarders",
