Add Seattle Kraken vs Vegas Golden Knights game from April 10, 2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "Aiyuk",
     "Akers",
     "Akins",
+    "Akira",
     "Akito",
     "Alain",
     "Alaina",
@@ -124,6 +125,9 @@
     "Balinskis",
     "Balson",
     "Bambrick",
+    "Barba",
+    "Barbashev",
+    "Barbashov",
     "Baringer",
     "Barkov",
     "Barner",
@@ -936,6 +940,7 @@
     "Kader",
     "Kadon",
     "Kadri",
+    "Kaedan",
     "Kaepernick",
     "Kahlef",
     "Kahler",
@@ -1041,6 +1046,7 @@
     "Kooper",
     "Kopitar",
     "Korchinski",
+    "Korczak",
     "Korte",
     "Koskenvuo",
     "Kotkaniemi",
@@ -1656,6 +1662,7 @@
     "Rylan",
     "Ryland",
     "Rymon",
+    "Saad",
     "Saddledome",
     "SAHN",
     "Saige",
@@ -1692,6 +1699,7 @@
     "Schelter",
     "Schenn",
     "Schlenker",
+    "Schmid",
     "Schmitt",
     "Schnee",
     "Schoen",
