--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -62,9 +62,14 @@ jobs:
           # Update version in package.json
           npm version ${{ steps.bump-type.outputs.bump_type }} --no-git-tag-version
           
+          # Get the new version number
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "New version: $NEW_VERSION"
+          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          
           # Stage and commit changes
           git add package.json
-          git commit -m "chore: bump version [skip ci]"
+          git commit -m "chore: bump version to $NEW_VERSION [skip ci]"
           git push origin "$BRANCH_NAME"
           
       - name: Create or Update Pull Request
@@ -72,8 +77,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          PR_TITLE="chore: version bump [skip ci]"
-          PR_BODY="Automated version bump triggered by merge to main branch"
+          NEW_VERSION="${{ steps.create-branch.outputs.new_version }}"
+          PR_TITLE="chore: version bump to $NEW_VERSION [skip ci]"
+          PR_BODY="Automated version bump to $NEW_VERSION triggered by merge to main branch"
           
           # Create labels if they don't exist (with --force to update)
           gh label create automated --color "#0E8A16" --description "Automated changes" --force
