feat: add NFL ESPN download scripts to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "download:whl:tbirds:date": "./src/download_whl.sh thunderbirds 2025-02-15",
     "download:whl:playoffs": "./src/download_whl_playoff_game.sh",
     "download:whl:playoffs:date": "./src/download_whl_playoff_game.sh 2025-04-05",
-    "test": "npm run test:workflows",
+    "download:nfl:espn": "./src/download_nfl_espn.sh",
+    "download:nfl:espn:date": "./src/download_nfl_espn.sh 401547716 SEA GB preseason 3",
+    "test": "npm run test:workflows && npm run test:nfl:espn",
+    "test:nfl:espn": "chmod +x ./src/test_download_nfl_espn.sh && ./src/test_download_nfl_espn.sh",
     "test:workflows": "chmod +x .github/test-workflows.sh && .github/test-workflows.sh",
     "test:workflows:semantic": "act pull_request -e .github/test-data/pr-events/minor.json -W .github/workflows/semantic-pr-check.yml",
     "test:workflows:semantic:major": "act pull_request -e .github/test-data/pr-events/major.json -W .github/workflows/semantic-pr-check.yml",
