feat: Add MLB data download script and npm helpers
- Created download_mlb.sh script for downloading MLB game data from Stats API
- Supports both regular season and postseason games
- Automatically extracts game date from API response
- Follows naming convention: YYYYMMDD-AWAY-v-HOME-GAMEID[-description].json
- Added npm scripts to package.json:
  - download:mariners (shortcut for Mariners games)
  - download:mlb (base script)
  - download:mlb:mariners (example postseason game)
  - download:mlb:regular (example regular season game)
  - download:mlb:postseason (example postseason game)
- Updated README with MLB download documentation
- Reorganized README to show MLB first, then NFL, then NHL

--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "This project explores working with a variety of APIs for sports data analysis and visualization.",
   "scripts": {
     "download:kraken": "npm run download:nhl:kraken",
+    "download:mariners": "npm run download:mlb:mariners",
+    "download:mlb": "./src/download_mlb.sh",
+    "download:mlb:mariners": "./src/download_mlb.sh 813058 DET SEA postseason alds-game1",
+    "download:mlb:regular": "./src/download_mlb.sh 745218 SF SEA regular",
+    "download:mlb:postseason": "./src/download_mlb.sh 813058 DET SEA postseason alds-game1",
+    "download:nfl:espn": "./src/download_nfl_espn.sh",
+    "download:nfl:espn:date": "./src/download_nfl_espn.sh 401547716 SEA GB preseason 3",
     "download:nhl:kraken": "./src/download_nhl.sh kraken",
     "download:nhl:kraken:date": "./src/download_nhl.sh kraken 2025-03-19",
     "download:tbirds": "npm run download:whl:game",
     "download:whl:game": "./src/download_whl_game.sh",
     "download:whl:game:date": "./src/download_whl_game.sh 2025-09-05",
     "download:whl:game:multiple": "./src/download_whl_game.sh 2025-09-02 2025-09-05",
-    "download:nfl:espn": "./src/download_nfl_espn.sh",
-    "download:nfl:espn:date": "./src/download_nfl_espn.sh 401547716 SEA GB preseason 3",
     "test": "npm run test:workflows && npm run test:nfl:espn",
     "test:nfl:espn": "chmod +x ./src/test_download_nfl_espn.sh && ./src/test_download_nfl_espn.sh",
     "test:workflows": "chmod +x .github/test-workflows.sh && .github/test-workflows.sh",
