feat: add timing to test script execution
- Wrapped test script with time command to measure execution duration
- Displays real, user, and system time for the entire test suite
- Helps track performance and identify slow tests

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "download:whl:game": "./src/download_whl_game.sh",
     "download:whl:game:date": "./src/download_whl_game.sh 2025-09-05",
     "download:whl:game:multiple": "./src/download_whl_game.sh 2025-09-02 2025-09-05",
-    "test": "npm run test:workflows && npm run test:nfl:espn",
+    "test": "time (npm run test:workflows && npm run test:nfl:espn)",
     "test:nfl:espn": "chmod +x ./src/test_download_nfl_espn.sh && ./src/test_download_nfl_espn.sh",
     "test:workflows": "chmod +x .github/test-workflows.sh && .github/test-workflows.sh",
     "test:workflows:semantic": "act pull_request -e .github/test-data/pr-events/minor.json -W .github/workflows/semantic-pr-check.yml",
