fix: remove hardcoded date from NHL download script
The download:nhl:kraken:date script had a hardcoded date (2025-03-19) that prevented passing custom dates via arguments. This caused unintended re-downloads of old games when trying to download new game data.

Changed from:
  ./src/download_nhl.sh kraken 2025-03-19

To:
  ./src/download_nhl.sh kraken

Now the script properly accepts date arguments via npm run download:nhl:kraken:date -- YYYY-MM-DD

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "download:nfl:espn": "./src/download_nfl_espn.sh",
     "download:nfl:espn:date": "./src/download_nfl_espn.sh 401547716 SEA GB preseason 3",
     "download:nhl:kraken": "./src/download_nhl.sh kraken",
-    "download:nhl:kraken:date": "./src/download_nhl.sh kraken 2025-03-19",
+    "download:nhl:kraken:date": "./src/download_nhl.sh kraken",
     "download:tbirds": "npm run download:whl:game",
     "download:whl:game": "./src/download_whl_game.sh",
     "download:whl:game:date": "./src/download_whl_game.sh 2025-09-05",
