feat: upgrade to Node.js v24 LTS
- Update GitHub Actions workflow to use Node.js 24
- Add .nvmrc and .node-version for version management
- Update README with Node.js 24 LTS prerequisites
- Add comprehensive upgrade guide documentation

Node.js 24 entered LTS on November 4th, 2025 and will be supported through April 2028. This upgrade ensures the project uses the latest LTS version with long-term support.

All existing tests pass with Node.js v22, and the upgrade is expected to be seamless given the project's simple dependency structure.

--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   "bugs": {
     "url": "https://github.com/SplooshAI/sploosh-ai-sports-analytics/issues"
   },
-  "homepage": "https://github.com/SplooshAI/sploosh-ai-sports-analytics#readme"
+  "homepage": "https://github.com/SplooshAI/sploosh-ai-sports-analytics#readme",
+  "engines": {
+    "node": ">=24.11.0",
+    "npm": ">=11.0.0"
+  }
 }
