test: add comprehensive test suite for NHL schedule script
- Created test_get_nhl_schedule.sh with 14 test cases
- Tests script existence, permissions, and help flag
- Validates date format handling and rejection
- Tests API connectivity and JSON parsing
- Verifies --no-copy and --raw flags work correctly
- Tests default date handling and unknown option rejection
- Validates multiple flag combinations
- Integrated into npm test suite via test:nhl:schedule
- All 14 tests pass successfully

--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "download:whl:game": "./src/download_whl_game.sh",
     "download:whl:game:date": "./src/download_whl_game.sh 2025-09-05",
     "download:whl:game:multiple": "./src/download_whl_game.sh 2025-09-02 2025-09-05",
-    "nhl:schedule": "./src/get_nhl_scores.sh",
-    "test": "time (npm run test:workflows && npm run test:nfl:espn)",
+    "nhl:schedule": "./src/get_nhl_schedule.sh",
+    "test": "time (npm run test:workflows && npm run test:nfl:espn && npm run test:nhl:schedule)",
     "test:nfl:espn": "chmod +x ./src/test_download_nfl_espn.sh && ./src/test_download_nfl_espn.sh",
+    "test:nhl:schedule": "chmod +x ./src/test_get_nhl_schedule.sh && ./src/test_get_nhl_schedule.sh",
     "test:workflows": "chmod +x .github/test-workflows.sh && .github/test-workflows.sh",
     "test:workflows:semantic": "act pull_request -e .github/test-data/pr-events/minor.json -W .github/workflows/semantic-pr-check.yml",
     "test:workflows:semantic:major": "act pull_request -e .github/test-data/pr-events/major.json -W .github/workflows/semantic-pr-check.yml",
